--- a/class2_lab_cp/index.html
+++ b/class2_lab_cp/index.html
@@ -27,7 +27,7 @@
     <nav id="nav-men">
       <ul>
         <li>Home( preparation )</li>
-        <li>HTML</li>
+        <li><a href="child/index_2.html">HTML</a></li>
         <li>CSS</li>
         <li>JavaScript</li>
         <li>Git</li>
