add new styles for header section.

--- a/class2_lab_cp/index.html
+++ b/class2_lab_cp/index.html
@@ -11,16 +11,14 @@
     <!-- !+tab key automatically shows default setting -->
     <header>
       <h1 class="header-message">
-        Hello Class
-        <img src="smile.svg" alt="" />
-      </h1>
+        Hello Class !!</h1>
       <p id="top-m">
-        <strong>Hey guys!</strong>
+        <strong>Hey guys <img src="smile.svg"/></strong>
         <br />
         This is our first
         <span style="color: #fc2aec; font-weight: bold">dev</span> exercise!
         <br />
-        Let's explore together!
+        Let's explore together
       </p>
     </header>
 
